@@ -5,7 +5,7 @@
 . ${srcdir}/wand/common.shi
 test_plan_fn 2
 rm -f drawtest_out.miff
-test_command_fn 'wand vector drawing' ${MEMCHECK} ./drawtest drawtest_out.miff
+test_command_fn 'wand vector drawing' -F 'TTF' ${MEMCHECK} ./drawtest drawtest_out.miff
 rm -f wandtest_out.miff
 test_command_fn 'wand api' -F TTF ${MEMCHECK} ./wandtest
 :
